--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".provider.AudioConfigContentProvider"
+            android:authorities="com.patriciocds.audiopreferences.audioprovider"
+            android:exported="true" />
+
     </application>
 
 </manifest>
